source/docs/en/1.0.0/table-of-contents.markdown
---
Type:            article
State:           [ obsolete ]
Title:           Table of contents
Project:         HandBrake
Project_URL:     https://handbrake.fr/
Project_Version: 1.0.0
Language:        English
Language_Code:   en
Authors:         [ Bradley Sepos <bradley@bradleysepos.com> (BradleyS), Scott (s55) ]
Copyright:       2018 HandBrake Team
License:         Creative Commons Attribution-ShareAlike 4.0 International
License_Abbr:    CC BY-SA 4.0
License_URL:     https://handbrake.fr/docs/license.html
---

Table of contents
=================

## Introduction

- [Quick start](introduction/quick-start.html)
  *Learn how to make your first video in minutes*
- [About HandBrake](introduction/about.html)
  *What HandBrake is, does, and does not*


## Getting HandBrake

- [Where to get HandBrake](get-handbrake/where-to-get-handbrake.html)
  *The officially supported version*
- [Downloading and installing HandBrake](get-handbrake/download-and-install.html)
  *How to get HandBrake onto your computer*
- [Checking for updates](get-handbrake/check-for-updates.html)
  *Staying up to date with the latest features and bug fixes*


## Making videos

- [Opening a video source](workflow/open-video-source.html)
  *How to get your videos into HandBrake*
- [Selecting a preset](workflow/select-preset.html)
  *Tailored settings for instant compatibility with many devices*
- [Adjusting quality](workflow/adjust-quality.html)
  *Easily increase visual quality or reduce file size*
- [Previewing your settings](workflow/preview-settings.html)
  *See what your new video will look like in a fraction of the time*
- [Starting encoding](workflow/start-encoding.html)
  *Start encoding your new video with one click*


## Advanced workflows

- [Multiple encodes using the queue](advanced/queue.html)
  *Set up multiple encode jobs at once*
- [Point-to-point encoding](advanced/point-to-point.html)<span class="notice draft"><span>draft</span></span>
- [Custom presets](advanced/custom-presets.html)<span class="notice draft"><span>draft</span></span>
- [Audio and subtitle defaults](advanced/audio-subtitle-defaults.html)<span class="notice draft"><span>draft</span></span>
- [Resizing video](advanced/resizing-video.html)<span class="notice draft"><span>draft</span></span>
- [Preserving surround sound](advanced/surround-sound.html)<span class="notice draft"><span>draft</span></span>
- [Adding subtitles](advanced/subtitles.html)<span class="notice draft"><span>draft</span></span>
- [Adding chapter markers](advanced/chapter-markers.html)<span class="notice draft"><span>draft</span></span>

<!-- - [Managing Audio Tracks](advanced/managing-audio.html) -->
<!-- - [Post-processing metadata](advanced/post-processing.html) -->


<!-- ## Restoration and enhancement

- Common video problems
  - Cropping, Black bars at top/bottom or sides
  - Combing effects caused by interlacing or telecine
    - Detelecine filter
    - Decomb filter vs. Deinterlace filter
    - Bob mode and frame rates, motion
  - Noise (grainy appearance and/or color splotches)
    - Denoise filters: NLMeans and HQDN3D
  - Blocky picture
    - Deblock filter
  - Stretched picture (too wide or too tall)
    - Scaling and anamorphic
- Common audio problems
  - Volume level too low
  - Dynamics too wide (soft whispers, loud booms)
-->

<!-- ## Advanced workflows part 2

- [Understanding source types](advanced/video-sources.html)<span class="notice draft"><span>draft</span></span>
- [Selecting a container format and encoders](advanced/containers.html)<span class="notice draft"><span>draft</span></span>
- [Selecting a video angle](advanced/video-angles.html)<span class="notice draft"><span>draft</span></span>
- [Working with frame rates](advanced/frame-rates.html)<span class="notice draft"><span>draft</span></span>
- [Adjusting audio quality](advanced/audio-quality.html)<span class="notice draft"><span>draft</span></span>
- [Progressive download support](advanced/web-optimised.html)<span class="notice draft"><span>draft</span></span>
- [Compatibility with legacy devices](advanced/old-ipod-support.html)<span class="notice draft"><span>draft</span></span>
- [Automatically naming files](advanced/automatic-file-naming.html)<span class="notice draft"><span>draft</span></span>
-->

## Getting help

- [Troubleshooting common issues](help/troubleshooting-common-issues.html)
  *What to do if something goes wrong*
- [Community support](help/community-support.html)
  *Get help from real people*
- [Activity Log](help/activity-log.html)
  *Activity Logs help you receive better support*


## HandBrake lore

- [Project history](about/history.html)<span class="notice draft"><span>draft</span></span>

<!-- - [About the cocktail and pineapple icon](about/the-icon.html)  -->


## CLI documentation

- [CLI guide](cli/cli-guide.html)<span class="notice draft"><span>draft</span></span>
- [CLI options list](cli/cli-options.html)<span class="notice draft"><span>draft</span></span>


## Technical documentation

- [System requirements](technical/system-requirements.html)
  *Make sure your system can run HandBrake*
- [Supported source formats](technical/source-formats.html)
  *Types of video files HandBrake can read*
- [Official presets](technical/official-presets.html)
  *Technical summary of the official presets*
- Video
  - [Video encoders](technical/video-codecs.html)<span class="notice draft"><span>draft</span></span>
  - [Video encoding speed](technical/video-encoding-performance.html)<span class="notice draft"><span>draft</span></span>
  - [Constant quality versus average bit rate](technical/video-cq-vs-abr.html)<span class="notice draft"><span>draft</span></span>
  - [x264 presets and tunes](technical/video-x264-presets-tunes.html)<span class="notice draft"><span>draft</span></span>
  - [x264 profile and level](technical/video-x264-profiles-levels.html)<span class="notice draft"><span>draft</span></span>
  - [Video angles](technical/video-angles.html)<span class="notice draft"><span>draft</span></span>
  - [Anamorphic video](technical/anamorphic-guide.html)<span class="notice draft"><span>draft</span></span>
  - [Modulus](technical/modulus.html)<span class="notice draft"><span>draft</span></span>
  - [Frame rate](technical/frame-rates.html)<span class="notice draft"><span>draft</span></span>
  - [Intel QuickSync Video (QSV) options](technical/video-qsv-options.html)<span class="notice draft"><span>draft</span></span>
- Audio
  - [Dynamic range compression](technical/dynamic-range-compression.html)<span class="notice draft"><span>draft</span></span>
  - [Audio quality](technical/audio-quality.html)<span class="notice draft"><span>draft</span></span>
- Files and compatibility
  - [Container formats](technical/containers.html)<span class="notice draft"><span>draft</span></span>
  - [iPod 5th Generation support](technical/old-ipod-support.html)<span class="notice draft"><span>draft</span></span>
  - [Automatic file naming](technical/automatic-file-naming.html)<span class="notice draft"><span>draft</span></span>
- Filters
  - [Filters summary](technical/filters-summary.html)<span class="notice draft"><span>draft</span></span>

<!--
- [Web optimized](technical/web-optimised.html)
- [Video source type](advanced/video-sources.html)
- Advanced Filter Settings
- Advanced preferences
-->

## Developer documentation

- Building HandBrake
  - [Building HandBrake for Linux](developer/build-linux.html)
    - Installing dependencies on [Arch](developer/install-dependencies-arch.html) / [CentOS](developer/install-dependencies-centos.html) / [Fedora](developer/install-dependencies-fedora.html) / [Gentoo](developer/install-dependencies-gentoo.html) / [Ubuntu](developer/install-dependencies-ubuntu.html)
  - [Building HandBrake for Mac](developer/build-mac.html)
  - [Building HandBrake for Windows](developer/build-windows.html)
- Packaging HandBrake
  - [Flatpak apps for Linux](developer/flatpak-repo.html)<span class="notice draft"><span>draft</span></span>
    *Fully-contained applications compatible with multiple Linux distributions*

<!-- TODO: link to contributing guide -->
